Set the min-width to 0 to prevent overflow bugs
[Adam Watham](https://twitter.com/adamwathan/status/1734696245015494711)
recommended using this value because the defaults values from browsers
can cause overflow bugs. Also this comment removes the "hack" used
in email section.

--- a/src/assets/css/layout/_contact.scss
+++ b/src/assets/css/layout/_contact.scss
@@ -54,7 +54,7 @@
 		}
 
 		&--email {
-			word-wrap: anywhere;
+			word-wrap: break-word;
 		}
 	}
 
